[package]
name = "voxl"
version = "0.0.1"
edition = "2018"
description = "An engine for voxel games"
license-file = "LICENSE"
readme = "README.md"
authors = ["Senre <jesuisutile0@gmail.com>"]
homepage = "https://github.com/voxl-rs/voxl"
repository = "https://github.com/voxl-rs/voxl.git"
documentation = "https://docs.rs/voxl"
keywords = ["game engine", "voxels", "3D"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8"
log = "0.4"

# Core
legion = { version = "0.3", features = ["serde"]}
shrev = "1.1"
rayon = "1.5"
evmap = "10.0"

# Something
serde = "1.0"
ron = "0.6"

# Graph
winit = "0.23"
wgpu = { version = "0.6", features = ["vulkan-portability"] }
image = "0.23"

# Math
cgmath = "0.17"
nalgebra = "0.23"
noise = "0.6"

# Utils
futures = "0.3"
bytemuck = "1.4"
anyhow = "1.0"
rand = "0.7"
shrinkwraprs = "0.3"

[dev-dependencies]
criterion = "0.3"

[build-dependencies]
shaderc = "0.7"
fs_extra = "1.2"
glob = "0.3"
anyhow = "1.0"
