[package]
name = "voxl"
version = "0.0.1"
edition = "2018"
description = "An engine for voxel games"
license-file = "LICENSE"
readme = "README.md"
authors = ["Lara19-dev <jesuisutile0@gmail.com>"]
homepage = "https://github.com/voxl-rs/voxl"
repository = "https://github.com/voxl-rs/voxl.git"
documentation = "https://docs.rs/voxl"
keywords = ["game engine", "voxels", "3D"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["gui", "default-window"]

default-window = ["gui"]
gui = ["winit", "wgpu", "image"]

serialize = ["serde", "legion/serialize"]

[dependencies]
env_logger = "0.8"
log = "0.4"

# Core
legion = { version = "0.3", default-features = false, features = [ "parallel" ] }
shrev = "1.1"
rayon = "1.5"
evmap = "10.0"

# Serialize
serde = { version = "1.0", optional = true }

# Graph
winit = { version = "0.24", optional = true }
wgpu = { version = "0.6", optional = true }
image = { version = "0.23", optional = true }

futures = "0.3"
bytemuck = { version = "1.4", features = ["derive"] }

# Math
cgmath = "0.18"
nalgebra = "0.24"
noice = "0.7"

# Utils
anyhow = "1.0"
rand = "0.8"
shrinkwraprs = "0.3"

[dev-dependencies]
criterion = "0.3"

[build-dependencies]
shaderc = "0.7"
fs_extra = "1.2"
glob = "0.3"
anyhow = "1.0"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
debug = false
