[package]
name = "voxl_core"
version = "0.0.1"
authors = ["Senre <jesuisutile0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
voxl_time = { path = "../voxl_time", version = "0.0.1", optional = false }
voxl_graph = { path = "../voxl_graph", version = "0.0.1", optional = false }

legion = { version = "0.3.1", features = ["serde"]}
shrev = "1.1.1"
rayon = "1.5.0"

serde = "1.0.117"
ron = "0.6.2"
